--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-native-infinite-wheel-picker": "^1.0.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
